# noa

./: .gitignore  CMakeLists.txt  README.md  demo.ipynb  enzyme-modsupport.diff  extension.cc
benchmark/: CMakeLists.txt
cmake/: find-omp.cmake
docs/cfd/: cfd-diffprog.ipynb  diffprog_two_phase.ipynb
docs/ghmc/: bayesian_deep_learning.ipynb  bayesian_nets.cc
docs/pms/: differentiable_programming_pms.ipynb  diffpms.cc  muon_dcs_calc.ipynb
enzyme/: CMakeLists.txt  enzyme.xx
example_consumer/: CMakeLists.txt  main.cc
example_module/: CMakeLists.txt  example.xx  module.cc  sum_ptr.xx
jnoa/: jnoa.hh
lib/: CMakeLists.txt  functions.cc  functions.hh
local_vol/: CMakeLists.txt  configs.xx  deviates.xx  euler_calc.xx  euler_calc_diff.xx  local_vol.cc  local_vol.xx  mat.xx  random.xx  spline.xx  vol_surface.xx
local_vol_consumer/: CMakeLists.txt  main.cc  rapidcsv.xx
pynoa/: __init__.py
pynoa/cfd/: __init__.py
python_bindings/: CMakeLists.txt  bindings.cc
src-cxx20/noa-cxx20/cfd/: cfd.hh  findiff.hh  forward_diff.hh  mhfe.hh  problem.hh
src-cxx20/noa-cxx20/combine/: combine.hh  dynamic_composer.hh  static_composer.hh  task_manip.hh  task_traits.hh
src-cxx20/noa-cxx20/utils/: meta.hh  unreachable.hh
src-cxx20/noa-cxx20/utils/domain/: domain.hh  layer_view.hh
src-cxx20/noa-cxx20/utils/tnl/: tnlx.hh
src/noa/bindings/python/: dtype.hh  wrapper.hh
src/noa/bindings/python/cfd/: cfd.cc
src/noa/cfd/: mhfe.hh  problem.hh
src/noa/pms/: dcs.cuh  dcs.hh  pumas.hh  trace.hh
src/noa/utils/: common_meta.hh  exceptions.hh  meshes.hh  numerics.hh
src/noa/utils/cfd/: cfd.hh  cfd_methods.hh  exceptions.hh  methods.hh  scalar_function.hh
src/noa/utils/cfd/tasks/: cfd_problem.hh  findiff.hh  gradev.hh  mhfe.hh
src/noa/utils/combine/: any_task.hh  combine.hh  computation_traits.hh  concepts_prelude.hh  dependency_list.hh  dummies.hh  dynamic_composer.hh  dynamic_computation.hh  static_composer.hh  static_computation.hh  task.hh  task_dynamic.hh  task_dynamic_base.hh  task_manip.hh  task_traits.hh  template_details.hh  test.hh
src/noa/utils/common/: common.hh  meta.hh
src/noa/utils/domain/: domain.hh  domain_concepts.hh  layer_view.hh  layer_view_base.hh  layermanager.hh
src/noa/utils/tnl/: tnlx.hh
test/: CMakeLists.txt  routines.hh  test-data.hh
test-cxx20/: CMakeLists.txt
test-cxx20/cfd/: CMakeLists.txt  main.cc
test-cxx20/pms/: CMakeLists.txt  muon-model.cc  particleworld.hh
test-cxx20/unit/: CMakeLists.txt  test-combine.cc
test/cfd/: CMakeLists.txt  CachedIntegrator.hh  main-pch.hh  main.cc
test/cfd/mhfe/: geometry.hh  mhfe.hh
test/cfd/mhfe/torch/: mhfe_extension.cc
test/combine/: CMakeLists.txt  bench.hh  main.cc  static_test.hh  test.cc
test/ghmc/: CMakeLists.txt
test/pms/: CMakeLists.txt
test/unit/: CMakeLists.txt  test-combine.cc  test-dcs-calc-cuda.cc  test-dcs-calc.cc  test-domain.hh  test-ghmc-sampler.hh  test-trace.hh
torch/: CMakeLists.txt  base.xx  torchext.xx
